Import pppstats from the ppp-2.3.1 distribution
Obtained from:  Paul Mackerras <paulus@cs.anu.edu.au>

--- a/usr.sbin/pppstats/Makefile
+++ b/usr.sbin/pppstats/Makefile
@@ -1,9 +1,9 @@
-#	$Id: Makefile.bsd,v 1.4 1995/04/28 06:23:18 paulus Exp $
+#	$Id: Makefile.bsd,v 1.5 1996/10/08 04:38:08 paulus Exp $
 
 PROG=	pppstats
 SRCS=	pppstats.c
-CFLAGS+=-I..
-MAN8=	pppstats.0
+CFLAGS+=-I.. -D_BITYPES
+MAN8=	pppstats.8
 MAN=	pppstats.cat8
 BINDIR=	/usr/sbin
 
