Add capsize(1) command, similar to pagesize(1), to query the kernel for its belief about the system capability size.  This is really just a wrapper around the security.cheri.capsize sysctl, but may be useful in writing scripts, debugging, etc.
(Modeled in every way on pagesize(1).)

--- a/usr.bin/Makefile
+++ b/usr.bin/Makefile
@@ -196,7 +196,8 @@ SUBDIR.${MK_ATM}+=	atm
 SUBDIR.${MK_BLUETOOTH}+=	bluetooth
 SUBDIR.${MK_BSD_CPIO}+=	cpio
 SUBDIR.${MK_CALENDAR}+=	calendar
-SUBDIR.${MK_CHERI}+=	libpng_sb_test
+SUBDIR.${MK_CHERI}+=	capsize \
+			libpng_sb_test
 SUBDIR.${MK_CLANG}+=	clang
 SUBDIR.${MK_EE}+=	ee
 SUBDIR.${MK_FILE}+=	file
