Added a libstatcounters to sample BERI's counters.
It defines a constructor that samples counters before main(), and a
function registered to sample the counters again after main and displays
the difference if the GATHER_STATCOUNTERS environment variable is set.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -71,6 +71,7 @@ SUBDIR=	${SUBDIR_ORDERED} \
 	liblzma \
 	${_libmagic} \
 	libmemstat \
+	libstatcounters \
 	libmd \
 	${_libmilter} \
 	${_libmp} \
