Finish renaming libdevctl to libdevdctl, started by r289684
r289684 only changed the source path and the shlib name for libdevctl.  This
change updates the install directory and the namespace too.

Sponsored by:	Spectra Logic Corp

--- a/head/lib/libdevdctl/Makefile
+++ b/head/lib/libdevdctl/Makefile
@@ -12,7 +12,7 @@ SRCS=	consumer.cc		\
 	exception.cc		\
 	guid.cc
 
-INCSDIR= ${INCLUDEDIR}/devctl
+INCSDIR= ${INCLUDEDIR}/devdctl
 
 WARNS?=	3
 SHLIB_MAJOR=	0
