Add a libc_nosyscalls.
This is everything in libc minus the contents of the sys directory so no
systemcall stubs.  The eventual intent is to decouple libc and the system
call interface allowing things like #153 and #27.  This is part of #22.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -36,6 +36,7 @@ SUBDIR=	${SUBDIR_ORDERED} \
 	libbsdstat \
 	libbsm \
 	libbz2 \
+	libc_nosyscalls \
 	libcalendar \
 	libcam \
 	${_libcapsicum} \
