--- a/lib/libc/tests/db/Makefile
+++ b/lib/libc/tests/db/Makefile
@@ -8,9 +8,12 @@ FILESDIR=	${TESTSDIR}
 
 FILES=		README
 
+.if ${MACHINE_CPUARCH} != "mips"
+# XXX: consumes a large amount of space in /tmp (200MB isn't enough)
 NETBSD_ATF_TESTS_SH+=	db_test
 ATF_TESTS_SH_SED_db_test=	-e 's,/bin/csh,/bin/cat,g'
 
 .include "../Makefile.netbsd-tests"
+.endif
 
 .include <bsd.test.mk>
