Always build helloworld shared when possible.

--- a/bin/helloworld/Makefile
+++ b/bin/helloworld/Makefile
@@ -1,5 +1,7 @@
 # $FreeBSD$
 
+.include <src.opts.mk>
+
 PROG=	helloworld
 
 MAN=
@@ -7,5 +9,10 @@ NEED_CHERI=	pure
 WANT_DUMP=	yes
 
 NO_WERROR=	YES
+
+.if ${MK_CHERI_SHARED} == "yes"
+# Always build shared if we're building shared libs.
+MK_CHERI_SHARED_PROG=yes
+.endif
 
 .include <bsd.prog.mk>
