Attempt to reduce footshooting in libcheribuildenv.
Disable tests as it done when building CHERI libraries.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -525,6 +525,7 @@ LIBCHERIWMAKEENV= \
 		COMPILER_TYPE=clang \
 		LIBCHERI=yes \
 		NO_PROFILE=yes \
+		MK_TESTS=no \
 		SYSROOT=${WORLDTMP} \
 		MAKEOBJDIRPREFIX=${LIBCHERI_OBJTREE} \
 		_LDSCRIPTROOT=${WORLDTMP} \
@@ -540,8 +541,7 @@ LIBCHERIWMAKEFLAGS= \
 		-DLIBRARIES_ONLY \
 		-DNO_CPU_CFLAGS \
 		MK_CTF=no \
-		-DNO_LINT \
-		MK_TESTS=no
+		-DNO_LINT
 
 LIBCHERIWMAKE=	${LIBCHERIWMAKEENV} ${MAKE} ${LIBCHERIWMAKEFLAGS} \
 		MK_MAN=no MK_HTML=no
