Don't build C++ tests in CheriABI

--- a/lib/atf/Makefile
+++ b/lib/atf/Makefile
@@ -28,8 +28,11 @@
 .include <src.opts.mk>
 
 SUBDIR=		libatf-c \
-		libatf-c++ \
                 ${_tests}
+
+.ifndef LIBCHERI
+SUBDIR+=	libatf-c++
+.endif
 
 .if ${MK_TESTS} != "no"
 _tests= 	tests
