--- a/resolvconf.8.in
+++ b/resolvconf.8.in
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd February 23, 2016
+.Dd May 7, 2016
 .Dt RESOLVCONF 8
 .Os
 .Sh NAME
@@ -64,7 +64,7 @@ solves this by letting the daemon send their
 file to
 .Nm
 via
-.Xr stdin 3
+.Xr stdin 4
 with the argument
 .Fl a Ar interface Ns Op Ar .protocol
 instead of the filesystem.
@@ -101,7 +101,7 @@ as private.
 This means that the name servers listed in that
 .Pa resolv.conf
 are only used for queries against the domain/search listed in the same file.
-This only works when a local resolver other than libc is installed. 
+This only works when a local resolver other than libc is installed.
 See
 .Xr resolvconf.conf 5
 for how to configure
@@ -290,16 +290,16 @@ Directory of subscribers which are run after the libc subscriber is run.
 State directory for
 .Nm .
 .El
+.Sh SEE ALSO
+.Xr resolver 3 ,
+.Xr stdin 4 ,
+.Xr resolv.conf 5 ,
+.Xr resolvconf.conf 5
 .Sh HISTORY
 This implementation of
 .Nm
 is called openresolv and is fully command line compatible with Debian's
 resolvconf, as written by Thomas Hood.
-.Sh SEE ALSO
-.Xr resolv.conf 5 ,
-.Xr resolvconf.conf 5 ,
-.Xr resolver 3 ,
-.Xr stdin 3
 .Sh AUTHORS
 .An Roy Marples Aq Mt roy@marples.name
 .Sh BUGS
