Annotate syscalls.master to generate a usable cheriabi_sysstubs.h.

--- a/sys/compat/cheriabi/syscalls.conf
+++ b/sys/compat/cheriabi/syscalls.conf
@@ -7,6 +7,7 @@ sysargmap_h="_CHERIABI_SYSARGMAP_H_"
 syshdr="cheriabi_syscall.h"
 syssw="cheriabi_sysent.c"
 sysmk="cheriabi_syscall.mk"
+sysstubs="cheriabi_sysstubs.h"
 syscallprefix="CHERIABI_SYS_"
 switchname="cheriabi_sysent"
 namesname="cheriabi_syscallnames"
