Actually set SHLIBDIR for CheriABI.

--- a/lib/libiconv_modules/Makefile.inc
+++ b/lib/libiconv_modules/Makefile.inc
@@ -9,7 +9,7 @@ CFLAGS+= -I${.CURDIR}/../../libc/iconv
 CFLAGS+=	-Dbool=_Bool
 
 .if !defined(COMPAT_32BIT)
-.if !define(LIBCHERI)
+.if !defined(LIBCHERI)
 SHLIBDIR= /usr/lib/i18n
 .else
 SHLIBDIR= /usr/libcheri/i18n
