--- a/lib/libc/mips/sys/Makefile.inc
+++ b/lib/libc/mips/sys/Makefile.inc
@@ -11,3 +11,6 @@ MDASM+=	brk.S sbrk.S
 
 # Don't generate default code for these syscalls:
 NOASM=	vfork.o
+
+# Only generate __sys_<sys> versions of these
+NO_UNDERSCORE=	fcntl ioctl open
