Disable the shared version of libcheri to allow the jni to be partially statically linked.

--- a/lib/libcheri/Makefile
+++ b/lib/libcheri/Makefile
@@ -3,6 +3,7 @@
 LIB=	cheri
 
 WANT_DUMP=      yes
+NO_SHARED=	yes
 
 # XXXRW: When compiling for CheriABI, will need to use cheri_invoke_cabi.S
 # here.
