Add directories in mtree needed for doctools

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -118,6 +118,12 @@
         ..
         bsdinstall
         ..
+        doctools
+            reftools
+            ..
+            hyphen
+            ..
+        ..
         hyperv
         ..
         lpr
@@ -306,6 +312,20 @@
                 ..
                 22.trofftut
                 ..
+            ..
+        ..
+        doctools
+            devpost
+                postscript
+                ..
+            ..
+            font
+            ..
+            pub
+            ..
+            tmac
+            ..
+            nterm
             ..
         ..
         dtrace
