Add directories for fonts

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -320,6 +320,18 @@
                 ..
             ..
             font
+                devhtml
+                ..
+                devpost
+                    charlib
+                    ..
+                ..
+                devps
+                ..
+                devpslow
+                ..
+                devpsmed
+                ..
             ..
             me
             ..
