Install hyphenation files

--- a/cddl/usr.bin/doctools/Makefile.inc
+++ b/cddl/usr.bin/doctools/Makefile.inc
@@ -3,9 +3,9 @@ CFLAGS+=	-I${DOCTOOLSDIR}/include
 NO_WERROR=	yes
 LIBDIR=	/usr/libexec/doctools
 REDFIR=	${LIBDIR}/reftools
-HYPDIR=	${LIBDIR}/hyphen
 DTSHAREDIR=	/usr/share/doctools
 FNTDIR=	${DTSHAREDIR}/font
+HYPDIR=	${DTSHAREDIR}/hyphen
 MACDIR=	${DTSHAREDIR}/tmac
 PSTDIR=	${DTSHAREDIR}/devpost/postscript
 PUBDIR=	${DTSHAREDIR}/pub
