--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -333,6 +333,8 @@
                 devpsmed
                 ..
             ..
+            hyphen
+            ..
             me
             ..
             nterm
