--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -120,6 +120,8 @@
         ..
         doctools
             reftools
+                papers
+                ..
             ..
             hyphen
             ..
