--- a/usr.bin/vgrind/Makefile
+++ b/usr.bin/vgrind/Makefile
@@ -4,11 +4,10 @@
 PROG=	vfontedpr
 SRCS=	regexp.c vfontedpr.c
 SCRIPTS=vgrind.sh
-FILES=	vgrindefs.src vgrindefs.src.db tmac.vgrind
+FILES=	vgrindefs.src vgrindefs.src.db
 FILESNAME_vgrindefs.src=	vgrindefs
 FILESNAME_vgrindefs.src.db=	vgrindefs.db
 FILESDIR=	${SHAREDIR}/misc
-FILESDIR_tmac.vgrind=	${SHAREDIR}/doctools/tmac
 MAN=	vgrind.1 vgrindefs.5
 
 WARNS?=	3
