Do not use solaris getopt.c

--- a/cddl/usr.bin/doctools/troff/troff/Makefile
+++ b/cddl/usr.bin/doctools/troff/troff/Makefile
@@ -37,8 +37,7 @@ LDADD.troff=	${.OBJDIR}/../libhnj/libhnj.a
 
 SRCS.devaps=	daps.c \
 		build.c \
-		draw.c \
-		getopt.c
+		draw.c
 LIBADD.devaps=	m
 MAN.devaps=
 
