--- a/cddl/usr.bin/doctools/Makefile.inc
+++ b/cddl/usr.bin/doctools/Makefile.inc
@@ -2,7 +2,7 @@ DOCTOOLSDIR=	${SRCTOP}/contrib/heirloom-doctools
 CFLAGS+=	-I${DOCTOOLSDIR}/include
 NO_WERROR=	yes
 LIBDIR=	/usr/libexec/doctools
-REDFIR=	${LIBDIR}/reftools
+REFDIR=	${LIBDIR}/reftools
 DTSHAREDIR=	/usr/share/doctools
 FNTDIR=	${DTSHAREDIR}/font
 HYPDIR=	${DTSHAREDIR}/hyphen
