--- a/share/doc/psd/15.yacc/Makefile
+++ b/share/doc/psd/15.yacc/Makefile
@@ -2,15 +2,11 @@
 # $FreeBSD$
 
 VOLUME=		psd/15.yacc
-SRCS=		stubs ss_ ss0 ss1 ss2 ss3 ss4 ss5 ss6 ss7 ss8 ss9 \
+SRCS=		ss_ ss0 ss1 ss2 ss3 ss4 ss5 ss6 ss7 ss8 ss9 \
 		ss10 ss11 ssa ssb ssc ssd
 EXTRA=		ref.bib
 MACROS=		-ms
+REFER_ARGS=	-e -p ${.CURDIR}/ref.bib
 USE_REFER=
-CLEANFILES=	stubs
-
-stubs:
-	@(echo .R1; echo database ${.CURDIR}/ref.bib; \
-	    echo accumulate; echo .R2) > ${.TARGET}
 
 .include <bsd.doc.mk>
